CSS Tweaks (Title no longer bleeds over tags)

--- a/modules/browse/css/browse.css
+++ b/modules/browse/css/browse.css
@@ -46,7 +46,7 @@ span.date {
 }
 
 li.link h3 {
-	height: 15px;
+	min-height: 15px;
 	line-height: 15px;
 	font-size: 15px;
 }
